--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="style.css" />
 
     <title>My Portofolio | Alfa Sean</title>
+
+    <link rel="shorcut icon" href="img/android-icon-192x192.png" type="image/x-icon" />
+    <link rel="icon" href="img/android-icon-192x192.png" type=image/x-icon" />
   </head>
   <body id="home">
     <!-- Navbar -->
@@ -46,7 +49,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/alfa.png" alt="Alfa Sean" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/20210321_202859.png" alt="Alfa Sean" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Alfa Sean</h1>
       <p class="lead">Student | Information System</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -174,6 +177,13 @@
               <div class="mb-3">
                 <label for="pesan" class="form-label">Message</label>
                 <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
+              </div>
+              <div class="row justify-content-center">
+                <div class="mb-3">
+                  <div class="col-md-6">
+                    <input class="form-control" type="file" id="formFile" />
+                  </div>
+                </div>
               </div>
               <button type="submit" class="btn btn-primary btn-submit">Submit</button>
               <button class="btn btn-primary btn-loading d-none" type="button" disabled>
